Fixed section title alignment

--- a/module2-assignment/css/styles.css
+++ b/module2-assignment/css/styles.css
@@ -32,6 +32,7 @@ h1 {
 
    .section-title{
        position: absolute;
+       margin-block-start: 0px;
        top: 0px;
        right:0px;
        text-align: center;
